@@ -14,9 +14,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package kafka.test.api;
+package org.apache.kafka.clients.consumer;
 
-import kafka.api.BaseConsumerTest;
 import kafka.server.KafkaBroker;
 
 import org.apache.kafka.clients.admin.Admin;
@@ -26,14 +25,6 @@ import org.apache.kafka.clients.admin.ConfigEntry;
 import org.apache.kafka.clients.admin.CreateTopicsResult;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.admin.RecordsToDelete;
-import org.apache.kafka.clients.consumer.AcknowledgeType;
-import org.apache.kafka.clients.consumer.AcknowledgementCommitCallback;
-import org.apache.kafka.clients.consumer.Consumer;
-import org.apache.kafka.clients.consumer.ConsumerConfig;
-import org.apache.kafka.clients.consumer.ConsumerRecord;
-import org.apache.kafka.clients.consumer.ConsumerRecords;
-import org.apache.kafka.clients.consumer.KafkaShareConsumer;
-import org.apache.kafka.clients.consumer.ShareConsumer;
 import org.apache.kafka.clients.producer.Producer;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
@@ -49,6 +40,7 @@ import org.apache.kafka.common.errors.InvalidRecordStateException;
 import org.apache.kafka.common.errors.InvalidTopicException;
 import org.apache.kafka.common.errors.WakeupException;
 import org.apache.kafka.common.header.Header;
+import org.apache.kafka.common.header.Headers;
 import org.apache.kafka.common.internals.Topic;
 import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.record.TimestampType;
@@ -68,6 +60,7 @@ import org.apache.kafka.coordinator.group.modern.share.ShareGroupConfig;
 import org.apache.kafka.server.share.SharePartitionKey;
 import org.apache.kafka.test.TestUtils;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Timeout;
 
@@ -75,7 +68,6 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -137,12 +129,15 @@ public class ShareConsumerTest {
     private final TopicPartition tp2 = new TopicPartition("topic2", 0);
     private final TopicPartition warmupTp = new TopicPartition("warmup", 0);
     private List<TopicPartition> sgsTopicPartitions;
-
+    private static final String KEY = "content-type";
+    private static final String VALUE = "application/octet-stream";
+    
     public ShareConsumerTest(ClusterInstance cluster) {
         this.cluster = cluster;
     }
 
-    private void setup() {
+    @BeforeEach
+    public void setup() {
         try {
             this.cluster.waitForReadyBrokers();
             createTopic("topic");
@@ -158,9 +153,8 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testPollNoSubscribeFails() {
-        setup();
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
-            assertEquals(Collections.emptySet(), shareConsumer.subscription());
+            assertEquals(Set.of(), shareConsumer.subscription());
             // "Consumer is not subscribed to any topics."
             assertThrows(IllegalStateException.class, () -> shareConsumer.poll(Duration.ofMillis(500)));
         }
@@ -168,10 +162,9 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscribeAndPollNoRecords() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
-            Set<String> subscription = Collections.singleton(tp.topic());
+            Set<String> subscription = Set.of(tp.topic());
             shareConsumer.subscribe(subscription);
             assertEquals(subscription, shareConsumer.subscription());
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(500));
@@ -182,15 +175,14 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscribePollUnsubscribe() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
-            Set<String> subscription = Collections.singleton(tp.topic());
+            Set<String> subscription = Set.of(tp.topic());
             shareConsumer.subscribe(subscription);
             assertEquals(subscription, shareConsumer.subscription());
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(500));
             shareConsumer.unsubscribe();
-            assertEquals(Collections.emptySet(), shareConsumer.subscription());
+            assertEquals(Set.of(), shareConsumer.subscription());
             assertEquals(0, records.count());
             verifyShareGroupStateTopicRecordsProduced();
         }
@@ -198,10 +190,9 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscribePollSubscribe() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
-            Set<String> subscription = Collections.singleton(tp.topic());
+            Set<String> subscription = Set.of(tp.topic());
             shareConsumer.subscribe(subscription);
             assertEquals(subscription, shareConsumer.subscription());
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(500));
@@ -216,15 +207,14 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscribeUnsubscribePollFails() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
-            Set<String> subscription = Collections.singleton(tp.topic());
+            Set<String> subscription = Set.of(tp.topic());
             shareConsumer.subscribe(subscription);
             assertEquals(subscription, shareConsumer.subscription());
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(500));
             shareConsumer.unsubscribe();
-            assertEquals(Collections.emptySet(), shareConsumer.subscription());
+            assertEquals(Set.of(), shareConsumer.subscription());
             // "Consumer is not subscribed to any topics."
             assertThrows(IllegalStateException.class, () -> shareConsumer.poll(Duration.ofMillis(500)));
             assertEquals(0, records.count());
@@ -234,15 +224,14 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscribeSubscribeEmptyPollFails() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
-            Set<String> subscription = Collections.singleton(tp.topic());
+            Set<String> subscription = Set.of(tp.topic());
             shareConsumer.subscribe(subscription);
             assertEquals(subscription, shareConsumer.subscription());
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(500));
-            shareConsumer.subscribe(Collections.emptySet());
-            assertEquals(Collections.emptySet(), shareConsumer.subscription());
+            shareConsumer.subscribe(Set.of());
+            assertEquals(Set.of(), shareConsumer.subscription());
             // "Consumer is not subscribed to any topics."
             assertThrows(IllegalStateException.class, () -> shareConsumer.poll(Duration.ofMillis(500)));
             assertEquals(0, records.count());
@@ -252,7 +241,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscriptionAndPoll() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -260,7 +248,7 @@ public class ShareConsumerTest {
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             producer.send(record);
             producer.flush();
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             verifyShareGroupStateTopicRecordsProduced();
@@ -269,7 +257,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscriptionAndPollMultiple() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -277,7 +264,7 @@ public class ShareConsumerTest {
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             producer.send(record);
             producer.flush();
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             producer.send(record);
@@ -291,8 +278,25 @@ public class ShareConsumerTest {
     }
 
     @ClusterTest
+    public void testPollRecordsGreaterThanMaxBytes() {
+        alterShareAutoOffsetReset("group1", "earliest");
+        try (Producer<byte[], byte[]> producer = createProducer();
+             ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(
+                 "group1",
+                 Map.of(ConsumerConfig.FETCH_MAX_BYTES_CONFIG, 1))
+        ) {
+            ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
+            producer.send(record);
+            producer.flush();
+            shareConsumer.subscribe(List.of(tp.topic()));
+            ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
+            assertEquals(1, records.count());
+            verifyShareGroupStateTopicRecordsProduced();
+        }
+    }
+
+    @ClusterTest
     public void testAcknowledgementSentOnSubscriptionChange() throws ExecutionException, InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -307,12 +311,12 @@ public class ShareConsumerTest {
             producer.flush();
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
                 DEFAULT_MAX_WAIT_MS, 100L, () -> "Failed to consume records for share consumer");
 
-            shareConsumer.subscribe(Collections.singletonList(tp2.topic()));
+            shareConsumer.subscribe(Set.of(tp2.topic()));
 
             // Waiting for heartbeat to propagate the subscription change.
             TestUtils.waitForCondition(() -> {
@@ -329,7 +333,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testAcknowledgementCommitCallbackSuccessfulAcknowledgement() throws Exception {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -342,7 +345,7 @@ public class ShareConsumerTest {
             producer.flush();
 
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
                 DEFAULT_MAX_WAIT_MS, 100L, () -> "Failed to consume records for share consumer");
@@ -360,7 +363,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testAcknowledgementCommitCallbackOnClose() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -371,7 +373,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
@@ -391,7 +393,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testAcknowledgementCommitCallbackInvalidRecordStateException() throws Exception {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -403,7 +404,7 @@ public class ShareConsumerTest {
             producer.flush();
 
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallback(partitionOffsetsMap, partitionExceptionMap));
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
@@ -446,7 +447,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testHeaders() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -457,7 +457,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             List<ConsumerRecord<byte[], byte[]>> records = consumeRecords(shareConsumer, numRecords);
             assertEquals(numRecords, records.size());
@@ -489,7 +489,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             List<ConsumerRecord<byte[], byte[]>> records = consumeRecords(shareConsumer, numRecords);
             assertEquals(numRecords, records.size());
@@ -498,25 +498,23 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testHeadersSerializerDeserializer() {
-        setup();
-        testHeadersSerializeDeserialize(new BaseConsumerTest.SerializerImpl(), new BaseConsumerTest.DeserializerImpl());
+        testHeadersSerializeDeserialize(new SerializerImpl(), new DeserializerImpl());
         verifyShareGroupStateTopicRecordsProduced();
     }
 
     @ClusterTest
     public void testMaxPollRecords() {
-        setup();
         int numRecords = 10000;
         int maxPollRecords = 2;
 
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1",
-            Collections.singletonMap(ConsumerConfig.MAX_POLL_RECORDS_CONFIG, String.valueOf(maxPollRecords)))) {
+            Map.of(ConsumerConfig.MAX_POLL_RECORDS_CONFIG, String.valueOf(maxPollRecords)))) {
 
             long startingTimestamp = System.currentTimeMillis();
             produceMessagesWithTimestamp(numRecords, startingTimestamp);
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             List<ConsumerRecord<byte[], byte[]>> records = consumeRecords(shareConsumer, numRecords);
             long i = 0L;
@@ -539,7 +537,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testControlRecordsSkipped() throws Exception {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> transactionalProducer = createProducer("T1");
              Producer<byte[], byte[]> nonTransactionalProducer = createProducer();
@@ -564,7 +561,7 @@ public class ShareConsumerTest {
             transactionalProducer.close();
             nonTransactionalProducer.close();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(4, records.count());
@@ -585,7 +582,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgeSuccess() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -594,7 +590,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             records.forEach(shareConsumer::acknowledge);
@@ -607,7 +603,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgeCommitSuccess() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -616,7 +611,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             records.forEach(shareConsumer::acknowledge);
@@ -631,7 +626,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgementCommitAsync() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer1 = createShareConsumer("group1");
@@ -645,8 +639,8 @@ public class ShareConsumerTest {
             producer.send(record3);
             producer.flush();
 
-            shareConsumer1.subscribe(Collections.singleton(tp.topic()));
-            shareConsumer2.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer1.subscribe(Set.of(tp.topic()));
+            shareConsumer2.subscribe(Set.of(tp.topic()));
 
             Map<TopicPartition, Set<Long>> partitionOffsetsMap1 = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap1 = new HashMap<>();
@@ -688,12 +682,11 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testImplicitModeNotTriggeredByPollWhenNoAcksToSend() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             Map<TopicPartition, Set<Long>> partitionOffsetsMap1 = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap1 = new HashMap<>();
@@ -726,7 +719,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgementCommitAsyncPartialBatch() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer1 = createShareConsumer("group1")) {
@@ -739,7 +731,7 @@ public class ShareConsumerTest {
             producer.send(record3);
             producer.flush();
 
-            shareConsumer1.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer1.subscribe(Set.of(tp.topic()));
 
             Map<TopicPartition, Set<Long>> partitionOffsetsMap = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap = new HashMap<>();
@@ -790,7 +782,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgeReleasePollAccept() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -799,7 +790,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             records.forEach(consumedRecord -> shareConsumer.acknowledge(consumedRecord, AcknowledgeType.RELEASE));
@@ -814,7 +805,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgeReleaseAccept() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -822,7 +812,7 @@ public class ShareConsumerTest {
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             producer.send(record);
             producer.flush();
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             records.forEach(consumedRecord -> shareConsumer.acknowledge(consumedRecord, AcknowledgeType.RELEASE));
@@ -835,7 +825,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgeReleaseClose() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -844,7 +833,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             records.forEach(consumedRecord -> shareConsumer.acknowledge(consumedRecord, AcknowledgeType.RELEASE));
@@ -854,7 +843,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testExplicitAcknowledgeThrowsNotInBatch() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -863,7 +851,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             ConsumerRecord<byte[], byte[]> consumedRecord = records.records(tp).get(0);
@@ -877,7 +865,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testImplicitAcknowledgeFailsExplicit() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -886,7 +873,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             ConsumerRecord<byte[], byte[]> consumedRecord = records.records(tp).get(0);
@@ -899,7 +886,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testImplicitAcknowledgeCommitSync() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -908,7 +894,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(1, records.count());
             Map<TopicIdPartition, Optional<KafkaException>> result = shareConsumer.commitSync();
@@ -923,7 +909,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testImplicitAcknowledgementCommitAsync() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -936,7 +921,7 @@ public class ShareConsumerTest {
             producer.send(record3);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             Map<TopicPartition, Set<Long>> partitionOffsetsMap1 = new HashMap<>();
             Map<TopicPartition, Exception> partitionExceptionMap1 = new HashMap<>();
@@ -962,8 +947,51 @@ public class ShareConsumerTest {
     }
 
     @ClusterTest
+    public void testConfiguredExplicitAcknowledgeCommitSuccess() {
+        alterShareAutoOffsetReset("group1", "earliest");
+        try (Producer<byte[], byte[]> producer = createProducer();
+            ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(
+                "group1",
+                Map.of(ConsumerConfig.INTERNAL_SHARE_ACKNOWLEDGEMENT_MODE_CONFIG, "explicit"))) {
+
+            ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
+            producer.send(record);
+            producer.flush();
+
+            shareConsumer.subscribe(Set.of(tp.topic()));
+            ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
+            assertEquals(1, records.count());
+            records.forEach(shareConsumer::acknowledge);
+            producer.send(record);
+            Map<TopicIdPartition, Optional<KafkaException>> result = shareConsumer.commitSync();
+            assertEquals(1, result.size());
+            records = shareConsumer.poll(Duration.ofMillis(5000));
+            assertEquals(1, records.count());
+            verifyShareGroupStateTopicRecordsProduced();
+        }
+    }
+
+    @ClusterTest
+    public void testConfiguredImplicitAcknowledgeExplicitAcknowledgeFails() {
+        alterShareAutoOffsetReset("group1", "earliest");
+        try (Producer<byte[], byte[]> producer = createProducer();
+             ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(
+                 "group1",
+                 Map.of(ConsumerConfig.INTERNAL_SHARE_ACKNOWLEDGEMENT_MODE_CONFIG, "implicit"))) {
+
+            ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
+            producer.send(record);
+            producer.flush();
+
+            shareConsumer.subscribe(Set.of(tp.topic()));
+            ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
+            assertEquals(1, records.count());
+            assertThrows(IllegalStateException.class, () -> shareConsumer.acknowledge(records.iterator().next()));
+        }
+    }
+
+    @ClusterTest
     public void testFetchRecordLargerThanMaxPartitionFetchBytes() throws Exception {
-        setup();
         int maxPartitionFetchBytes = 10000;
 
         alterShareAutoOffsetReset("group1", "earliest");
@@ -971,16 +999,14 @@ public class ShareConsumerTest {
             Producer<byte[], byte[]> producer = createProducer();
             ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(
                 "group1",
-                Collections.singletonMap(ConsumerConfig.MAX_PARTITION_FETCH_BYTES_CONFIG, String.valueOf(maxPartitionFetchBytes))
-            )
-        ) {
+                Map.of(ConsumerConfig.MAX_PARTITION_FETCH_BYTES_CONFIG, String.valueOf(maxPartitionFetchBytes)))) {
 
             ProducerRecord<byte[], byte[]> smallRecord = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             ProducerRecord<byte[], byte[]> bigRecord = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), new byte[maxPartitionFetchBytes]);
             producer.send(smallRecord).get();
             producer.send(bigRecord).get();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             ConsumerRecords<byte[], byte[]> records = shareConsumer.poll(Duration.ofMillis(5000));
             assertEquals(2, records.count());
@@ -990,7 +1016,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testMultipleConsumersWithDifferentGroupIds() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         alterShareAutoOffsetReset("group2", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
@@ -999,9 +1024,8 @@ public class ShareConsumerTest {
 
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
 
-            shareConsumer1.subscribe(Collections.singleton(tp.topic()));
-
-            shareConsumer2.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer1.subscribe(Set.of(tp.topic()));
+            shareConsumer2.subscribe(Set.of(tp.topic()));
 
             // producing 3 records to the topic
             producer.send(record);
@@ -1042,15 +1066,14 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testMultipleConsumersInGroupSequentialConsumption() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer1 = createShareConsumer("group1");
              ShareConsumer<byte[], byte[]> shareConsumer2 = createShareConsumer("group1")) {
 
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
-            shareConsumer1.subscribe(Collections.singleton(tp.topic()));
-            shareConsumer2.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer1.subscribe(Set.of(tp.topic()));
+            shareConsumer2.subscribe(Set.of(tp.topic()));
 
             int totalMessages = 2000;
             for (int i = 0; i < totalMessages; i++) {
@@ -1080,7 +1103,6 @@ public class ShareConsumerTest {
     @ClusterTest
     public void testMultipleConsumersInGroupConcurrentConsumption()
             throws InterruptedException, ExecutionException, TimeoutException {
-        setup();
         AtomicInteger totalMessagesConsumed = new AtomicInteger(0);
 
         int consumerCount = 4;
@@ -1115,7 +1137,6 @@ public class ShareConsumerTest {
     @ClusterTest
     public void testMultipleConsumersInMultipleGroupsConcurrentConsumption()
             throws ExecutionException, InterruptedException, TimeoutException {
-        setup();
         AtomicInteger totalMessagesConsumedGroup1 = new AtomicInteger(0);
         AtomicInteger totalMessagesConsumedGroup2 = new AtomicInteger(0);
         AtomicInteger totalMessagesConsumedGroup3 = new AtomicInteger(0);
@@ -1178,15 +1199,14 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testConsumerCloseInGroupSequential() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer1 = createShareConsumer("group1");
              ShareConsumer<byte[], byte[]> shareConsumer2 = createShareConsumer("group1")) {
 
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
-            shareConsumer1.subscribe(Collections.singleton(tp.topic()));
-            shareConsumer2.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer1.subscribe(Set.of(tp.topic()));
+            shareConsumer2.subscribe(Set.of(tp.topic()));
 
             int totalMessages = 1500;
             for (int i = 0; i < totalMessages; i++) {
@@ -1227,7 +1247,6 @@ public class ShareConsumerTest {
     @ClusterTest
     public void testMultipleConsumersInGroupFailureConcurrentConsumption()
             throws InterruptedException, ExecutionException, TimeoutException {
-        setup();
         AtomicInteger totalMessagesConsumed = new AtomicInteger(0);
 
         int consumerCount = 4;
@@ -1272,7 +1291,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testAcquisitionLockTimeoutOnConsumer() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -1337,7 +1355,6 @@ public class ShareConsumerTest {
      */
     @ClusterTest
     public void testAcknowledgementCommitCallbackCallsShareConsumerDisallowed() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -1347,7 +1364,7 @@ public class ShareConsumerTest {
             producer.flush();
 
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallbackWithShareConsumer<>(shareConsumer));
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             // The acknowledgment commit callback will try to call a method of ShareConsumer
             shareConsumer.poll(Duration.ofMillis(5000));
@@ -1370,7 +1387,7 @@ public class ShareConsumerTest {
         public void onComplete(Map<TopicIdPartition, Set<Long>> offsetsMap, Exception exception) {
             // Accessing methods of ShareConsumer should throw an exception.
             assertThrows(IllegalStateException.class, shareConsumer::close);
-            assertThrows(IllegalStateException.class, () -> shareConsumer.subscribe(Collections.singleton(tp.topic())));
+            assertThrows(IllegalStateException.class, () -> shareConsumer.subscribe(Set.of(tp.topic())));
             assertThrows(IllegalStateException.class, () -> shareConsumer.poll(Duration.ofMillis(5000)));
         }
     }
@@ -1381,7 +1398,6 @@ public class ShareConsumerTest {
      */
     @ClusterTest
     public void testAcknowledgementCommitCallbackCallsShareConsumerWakeup() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -1392,7 +1408,7 @@ public class ShareConsumerTest {
 
             // The acknowledgment commit callback will try to call a method of ShareConsumer
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallbackWakeup<>(shareConsumer));
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
                 DEFAULT_MAX_WAIT_MS, 100L, () -> "Failed to consume records for share consumer");
@@ -1406,7 +1422,7 @@ public class ShareConsumerTest {
             TestUtils.waitForCondition(() -> {
                 try {
                     shareConsumer.poll(Duration.ofMillis(500));
-                } catch (org.apache.kafka.common.errors.WakeupException e) {
+                } catch (WakeupException e) {
                     exceptionThrown.set(true);
                 }
                 return exceptionThrown.get();
@@ -1434,7 +1450,6 @@ public class ShareConsumerTest {
      */
     @ClusterTest
     public void testAcknowledgementCommitCallbackThrowsException() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -1444,7 +1459,7 @@ public class ShareConsumerTest {
             producer.flush();
 
             shareConsumer.setAcknowledgementCommitCallback(new TestableAcknowledgementCommitCallbackThrows<>());
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             TestUtils.waitForCondition(() -> shareConsumer.poll(Duration.ofMillis(2000)).count() == 1,
                 DEFAULT_MAX_WAIT_MS, 100L, () -> "Failed to consume records for share consumer");
@@ -1475,11 +1490,10 @@ public class ShareConsumerTest {
      */
     @ClusterTest
     public void testPollThrowsInterruptExceptionIfInterrupted() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             // interrupt the thread and call poll
             try {
@@ -1500,11 +1514,10 @@ public class ShareConsumerTest {
      */
     @ClusterTest
     public void testSubscribeOnInvalidTopicThrowsInvalidTopicException() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
 
-            shareConsumer.subscribe(Collections.singleton("topic abc"));
+            shareConsumer.subscribe(Set.of("topic abc"));
 
             // The exception depends upon a metadata response which arrives asynchronously. If the delay is
             // too short, the poll might return before the error is known.
@@ -1518,7 +1531,6 @@ public class ShareConsumerTest {
      */
     @ClusterTest
     public void testWakeupWithFetchedRecordsAvailable() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
@@ -1527,7 +1539,7 @@ public class ShareConsumerTest {
             producer.send(record);
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             shareConsumer.wakeup();
             assertThrows(WakeupException.class, () -> shareConsumer.poll(Duration.ZERO));
@@ -1540,13 +1552,12 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscriptionFollowedByTopicCreation() throws InterruptedException {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1")) {
 
             String topic = "foo";
-            shareConsumer.subscribe(Collections.singleton(topic));
+            shareConsumer.subscribe(Set.of(topic));
 
             // Topic is created post creation of share consumer and subscription
             createTopic(topic);
@@ -1570,7 +1581,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testSubscriptionAndPollFollowedByTopicDeletion() throws InterruptedException, ExecutionException {
-        setup();
         String topic1 = "bar";
         String topic2 = "baz";
         createTopic(topic1);
@@ -1613,7 +1623,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testLsoMovementByRecordsDeletion() {
-        setup();
         String groupId = "group1";
 
         alterShareAutoOffsetReset(groupId, "earliest");
@@ -1630,7 +1639,7 @@ public class ShareConsumerTest {
             }
 
             // We delete records before offset 5, so the LSO should move to 5.
-            adminClient.deleteRecords(Collections.singletonMap(tp, RecordsToDelete.beforeOffset(5L)));
+            adminClient.deleteRecords(Map.of(tp, RecordsToDelete.beforeOffset(5L)));
 
             int messageCount = consumeMessages(new AtomicInteger(0), 5, groupId, 1, 10, true);
             // The records returned belong to offsets 5-9.
@@ -1642,14 +1651,14 @@ public class ShareConsumerTest {
             }
 
             // We delete records before offset 14, so the LSO should move to 14.
-            adminClient.deleteRecords(Collections.singletonMap(tp, RecordsToDelete.beforeOffset(14L)));
+            adminClient.deleteRecords(Map.of(tp, RecordsToDelete.beforeOffset(14L)));
 
             int consumeMessagesCount = consumeMessages(new AtomicInteger(0), 1, groupId, 1, 10, true);
             // The record returned belong to offset 14.
             assertEquals(1, consumeMessagesCount);
 
             // We delete records before offset 15, so the LSO should move to 15 and now no records should be returned.
-            adminClient.deleteRecords(Collections.singletonMap(tp, RecordsToDelete.beforeOffset(15L)));
+            adminClient.deleteRecords(Map.of(tp, RecordsToDelete.beforeOffset(15L)));
 
             messageCount = consumeMessages(new AtomicInteger(0), 0, groupId, 1, 5, true);
             assertEquals(0, messageCount);
@@ -1659,11 +1668,10 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testShareAutoOffsetResetDefaultValue() {
-        setup();
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1");
              Producer<byte[], byte[]> producer = createProducer()) {
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             // Producing a record.
             producer.send(record);
@@ -1686,12 +1694,11 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testShareAutoOffsetResetEarliest() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1");
              Producer<byte[], byte[]> producer = createProducer()) {
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             // Producing a record.
             producer.send(record);
@@ -1712,15 +1719,13 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testShareAutoOffsetResetEarliestAfterLsoMovement() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         try (
             ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group1");
             Producer<byte[], byte[]> producer = createProducer();
             Admin adminClient = createAdminClient()
         ) {
-
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
 
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             // We write 10 records to the topic, so they would be written from offsets 0-9 on the topic.
@@ -1729,7 +1734,7 @@ public class ShareConsumerTest {
             }
 
             // We delete records before offset 5, so the LSO should move to 5.
-            adminClient.deleteRecords(Collections.singletonMap(tp, RecordsToDelete.beforeOffset(5L)));
+            adminClient.deleteRecords(Map.of(tp, RecordsToDelete.beforeOffset(5L)));
 
             int consumedMessageCount = consumeMessages(new AtomicInteger(0), 5, "group1", 1, 10, true);
             // The records returned belong to offsets 5-9.
@@ -1740,16 +1745,14 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testShareAutoOffsetResetMultipleGroupsWithDifferentValue() {
-        setup();
         alterShareAutoOffsetReset("group1", "earliest");
         alterShareAutoOffsetReset("group2", "latest");
         try (ShareConsumer<byte[], byte[]> shareConsumerEarliest = createShareConsumer("group1");
              ShareConsumer<byte[], byte[]> shareConsumerLatest = createShareConsumer("group2");
              Producer<byte[], byte[]> producer = createProducer()) {
 
-            shareConsumerEarliest.subscribe(Collections.singleton(tp.topic()));
-
-            shareConsumerLatest.subscribe(Collections.singleton(tp.topic()));
+            shareConsumerEarliest.subscribe(Set.of(tp.topic()));
+            shareConsumerLatest.subscribe(Set.of(tp.topic()));
 
             ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(tp.topic(), tp.partition(), null, "key".getBytes(), "value".getBytes());
             // Producing a record.
@@ -1781,7 +1784,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testShareAutoOffsetResetByDuration() throws Exception {
-        setup();
         // Set auto offset reset to 1 hour before current time
         alterShareAutoOffsetReset("group1", "by_duration:PT1H");
         
@@ -1805,7 +1807,7 @@ public class ShareConsumerTest {
             producer.send(currentRecord).get();
             producer.flush();
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             
             // Should only receive messages from last hour (recent and current)
             List<ConsumerRecord<byte[], byte[]>> records = consumeRecords(shareConsumer, 2);
@@ -1824,7 +1826,7 @@ public class ShareConsumerTest {
         try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("group2");
              Producer<byte[], byte[]> producer = createProducer()) {
 
-            shareConsumer.subscribe(Collections.singleton(tp.topic()));
+            shareConsumer.subscribe(Set.of(tp.topic()));
             List<ConsumerRecord<byte[], byte[]>> records = consumeRecords(shareConsumer, 3);
             assertEquals(3, records.size());
             verifyShareGroupStateTopicRecordsProduced();
@@ -1833,7 +1835,6 @@ public class ShareConsumerTest {
 
     @ClusterTest
     public void testShareAutoOffsetResetByDurationInvalidFormat() throws Exception {
-        setup();
         // Test invalid duration format
         ConfigResource configResource = new ConfigResource(ConfigResource.Type.GROUP, "group1");
         Map<ConfigResource, Collection<AlterConfigOp>> alterEntries = new HashMap<>();
@@ -1872,7 +1873,6 @@ public class ShareConsumerTest {
     )
     @Timeout(90)
     public void testShareConsumerAfterCoordinatorMovement() throws Exception {
-        setup();
         String topicName = "multipart";
         String groupId = "multipartGrp";
         Uuid topicId = createTopic(topicName, 3, 3);
@@ -2025,7 +2025,6 @@ public class ShareConsumerTest {
     )
     @Timeout(150)
     public void testComplexShareConsumer() throws Exception {
-        setup();
         String topicName = "multipart";
         String groupId = "multipartGrp";
         createTopic(topicName, 3, 3);
@@ -2123,7 +2122,7 @@ public class ShareConsumerTest {
         return assertDoesNotThrow(() -> {
             try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(
                     groupId)) {
-                shareConsumer.subscribe(Collections.singleton(tp.topic()));
+                shareConsumer.subscribe(Set.of(tp.topic()));
                 return consumeMessages(shareConsumer, totalMessagesConsumed, totalMessages, consumerNumber, maxPolls, commit);
             }
         }, "Consumer " + consumerNumber + " failed with exception");
@@ -2140,7 +2139,7 @@ public class ShareConsumerTest {
             try (ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer(
                     groupId,
                     Map.of(ConsumerConfig.MAX_PARTITION_FETCH_BYTES_CONFIG, maxFetchBytes))) {
-                shareConsumer.subscribe(Collections.singleton(tp.topic()));
+                shareConsumer.subscribe(Set.of(tp.topic()));
                 return consumeMessages(shareConsumer, totalMessagesConsumed, totalMessages, consumerNumber, maxPolls, commit);
             }
         }, "Consumer " + consumerNumber + " failed with exception");
@@ -2200,7 +2199,7 @@ public class ShareConsumerTest {
         AtomicReference<Uuid> topicId = new AtomicReference<>(null);
         assertDoesNotThrow(() -> {
             try (Admin admin = createAdminClient()) {
-                CreateTopicsResult result = admin.createTopics(Collections.singleton(new NewTopic(topicName, numPartitions, (short) replicationFactor)));
+                CreateTopicsResult result = admin.createTopics(Set.of(new NewTopic(topicName, numPartitions, (short) replicationFactor)));
                 result.all().get();
                 topicId.set(result.topicId(topicName).get());
             }
@@ -2212,7 +2211,7 @@ public class ShareConsumerTest {
     private void deleteTopic(String topicName) {
         assertDoesNotThrow(() -> {
             try (Admin admin = createAdminClient()) {
-                admin.deleteTopics(Collections.singleton(topicName)).all().get();
+                admin.deleteTopics(Set.of(topicName)).all().get();
             }
         }, "Failed to delete topic");
     }
@@ -2257,7 +2256,7 @@ public class ShareConsumerTest {
         createTopic(warmupTp.topic());
         waitForMetadataCache();
         ProducerRecord<byte[], byte[]> record = new ProducerRecord<>(warmupTp.topic(), warmupTp.partition(), null, "key".getBytes(), "value".getBytes());
-        Set<String> subscription = Collections.singleton(warmupTp.topic());
+        Set<String> subscription = Set.of(warmupTp.topic());
         alterShareAutoOffsetReset("warmupgroup1", "earliest");
         try (Producer<byte[], byte[]> producer = createProducer();
              ShareConsumer<byte[], byte[]> shareConsumer = createShareConsumer("warmupgroup1")) {
@@ -2412,6 +2411,37 @@ public class ShareConsumerTest {
         } catch (Exception e) {
             service.shutdownNow();
             Thread.currentThread().interrupt();
+        }
+    }
+
+    public static class SerializerImpl implements Serializer<byte[]> {
+
+        @Override
+        public byte[] serialize(String topic, Headers headers, byte[] data) {
+            headers.add(KEY, VALUE.getBytes());
+            return data;
+        }
+
+        @Override
+        public byte[] serialize(String topic, byte[] data) {
+            fail("method should not be invoked");
+            return null;
+        }
+    }
+
+    public static class DeserializerImpl implements Deserializer<byte[]> {
+
+        @Override
+        public byte[] deserialize(String topic, Headers headers, byte[] data) {
+            Header header = headers.lastHeader(KEY);
+            assertEquals("application/octet-stream", header == null ? null : new String(header.value()));
+            return data;
+        }
+
+        @Override
+        public byte[] deserialize(String topic, byte[] data) {
+            fail("method should not be invoked");
+            return null;
         }
     }
 }
